@@ -18,6 +18,7 @@
   * Testsuite and Python 3.0 compatibility for "associate()"
     returning a list. In particular, in Python 3.0 the list
     must contain bytes.
+  * Implements "DBEnv->fileid_reset()".  (Duncan Findlay)
 
 4.7.3: (Python 2.6 release. First release with Python 3.0 support)
   * "private" is a keyword in C++.  (Duncan Grisby)
